# gpx-geptimedb-loader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  error.rs  greptimedb.rs  main.rs  schema.rs  track.rs
tests/assets/: wikipedia_example.gpx
